Opened 13 years ago
Closed 13 years ago
#8468 closed bug (fixed)
NetworkStatus doesn't correctly handle multiple active interfaces
Reported by: | anevilyak | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/NetworkStatus | Version: | R1/Development |
Keywords: | Cc: | jprostko | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
In http://cgit.haiku-os.org/haiku/tree/src/apps/networkstatus/NetworkStatusView.cpp#n542
Status handling is completely broken when multiple interfaces are involved, since the notification will always be sent with the name of the first interface, even if a different interface is in fact the one that's changed. Status needs to be properly tracked per card so notifications can be correctly posted.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev44022.