src/apps/networkstatus/NetworkStatusView.h
@@ -14,7 +14,10 @@
 #include <ObjectList.h>
 #include <View.h>
 
+#include <map>
+
 class BMessageRunner;
+class BNetworkInterface;
 
 
 enum {
@@ -26,6 +29,7 @@ enum {
 
 	kStatusCount
 };
+
 
 class NetworkStatusView : public BView {
 	public:
@@ -53,15 +57,16 @@ class NetworkStatusView : public BView {
 		void			_ShowConfiguration(BMessage* message);
 		bool			_PrepareRequest(struct ifreq& request,
 							const char* name);
-		int32			_DetermineInterfaceStatus(const char* name);
+		int32			_DetermineInterfaceStatus(
+							const BNetworkInterface& interface);
 		void			_Update(bool force = false);
 		void			_OpenNetworksPreferences();
 
-		BObjectList<BString> fInterfaces;
+		std::map<BString, int32>
+						fInterfaceStatuses;
 		bool			fInDeskbar;
 		BBitmap*		fTrayIcons[kStatusCount];
 		BBitmap*		fNotifyIcons[kStatusCount];
-		int32			fStatus;
 };
 
 #endif	// NETWORK_STATUS_VIEW_H
